# cwm-downloader

./: .gitattributes  .gitignore  Pipfile  README.md  cwm_downloader.py  pyproject.toml
.github/workflows/: python-publish.yml
cwm_downloader/: __init__.py  __main__.py  argument_parser.py  cli.py  exceptions.py  utils.py
cwm_downloader/scraper/: _scraper.py  course_scraper.py  element_selectors.py  lecture_scraper.py  markup_template.py
src/: __main__.py  argument_parser.py  exceptions.py  main.py  scraper.py  utils.py
src/scraper/: _scraper.py  course_scraper.py  element_selectors.json  element_selectors.py  lecture_scraper.py  markup_template.py
tests/: conftest.py  test_course_scraper.py  test_lecture_scraper.py  test_scraper.py
