[tool.poetry]
name = "cwm-downloader"
version = "0.1.0"
description = "A python cli program that can download enrolled courses from https://codewithmosh.com given the valid login credentials(headers and cookies)."
authors = ["Bazliel Wondimagegn <92359779+bython17@users.noreply.github.com>"]
license="Apache-2.0"
readme="README.md"
repository="https://github.com/bython17/cwm-downloader"

[tool.poetry.scripts]
cwm-downloader = "cwm_downloader.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
beautifulsoup4 = "*"
rich = "*"
typer = {extras = ["all"], version = "*"}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mypy = "*"
mypy = "*"
autopep8 = "*"
types-beautifulsoup4 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
